force-app/main/default/objects/Formula_mayor_costo__c/Formula_mayor_costo__c.object-meta.xml
<CustomObject>
    <label>Formula Mayor costo</label>
    <nameField>
        <displayFormat>MYC-{00000000}</displayFormat>
        <label>Nombre de Mayor costo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formula Mayores costos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>