force-app/main/default/objects/Formula_mayor_costo__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <label>Contrato</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipName>Mayores_costos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>