force-app/main/default/objects/Formula_mayor_costo__c/fields/Fecha_base__c.field-meta.xml
<CustomField>
    <fullName>Fecha_base__c</fullName>
    <label>Fecha base</label>
    <length>7</length>
    <type>Text</type>
</CustomField>