force-app/main/default/objects/Formula_mayor_costo__c/fields/Indicador__c.field-meta.xml
<CustomField>
    <fullName>Indicador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indicador</label>
    <referenceTo>Indicador__c</referenceTo>
    <relationshipName>Mayores_costos</relationshipName>
    <type>Lookup</type>
</CustomField>