force-app/main/default/objects/Formula_mayor_costo__c/fields/Metodologia_ajuste__c.field-meta.xml
<CustomField>
    <fullName>Metodologia_ajuste__c</fullName>
    <label>Metodología ajuste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Definitivo</fullName>
            </value>
            <value>
                <fullName>Provisorio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>